--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ filelock==3.0.12
 gunicorn==20.1.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-mysqlclient==2.0.3
 platformdirs==2.3.0
 PyJWT==1.7.1
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
 virtualenv==20.7.2
+whitenoise==5.3.0
+dj-database-url==0.5.0
+psycopg2==2.9.1
